Initial fix for legend overlapping with other plugins

--- a/bundles/statistics/statsgrid2016/scss/style.scss
+++ b/bundles/statistics/statsgrid2016/scss/style.scss
@@ -333,6 +333,8 @@ div.oskari-flyoutcontent{
     border: 1px solid rgba(0,0,0,0.2);
     pointer-events: auto;
     text-align: left;
+    /* Float right to not overlap with other plugins */
+    float: right;
 }
 
 .statsgrid-legend-container {
